# bby

./: .gitignore  CMakeLists.txt  Makefile  README.md  build-linux.sh  build-windows.sh  build.sh
src/: attacks.cpp  attacks.h  bbinit.cpp  bbinit.h  bench.h  bench_cli.cpp  bench_cli.h  board.cpp  board.h  common.cpp  common.h  debug.cpp  debug.h  epd.cpp  epd.h  eval.cpp  eval.h  hash.cpp  hash.h  main.cpp  moveorder.cpp  moveorder.h  perft.cpp  perft.h  pgn.cpp  pgn.h  qsearch_probe.cpp  qsearch_probe.h  search.cpp  search.h  search_stack.cpp  search_stack.h  searchparams.h  timeman.cpp  timeman.h  uci.cpp  uci.h
src/syzygy/: tbcore.c  tbcore.h  tbprobe.cpp  tbprobe.h
test/: CMakeLists.txt
test/data/: README.md  mini.epd  perft_depth6.txt
test/fuzz/: README.md  fuzz_epd.cpp  fuzz_fen.cpp  fuzz_make_unmake.cpp  fuzz_uci.cpp
test/perft/: README.md
test/unit/: board_tests.cpp  debug_tests.cpp  epd_tests.cpp  eval_tests.cpp  hash_tests.cpp  moveorder_tests.cpp  perft_tests.cpp  pgn_tests.cpp  property_tests.cpp  qsearch_probe_tests.cpp  search_stack_tests.cpp  search_tests.cpp  timeman_tests.cpp  uci_tests.cpp
tests/positions/: bratko_kopec.epd  wacnew.epd
tools/: epd_main.cpp  perft_compare.py  perft_main.cpp  perft_telemetry.py  san_to_uci.cpp  wac_suite.py
